--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,5 @@ include_directories(lib/googletest/googlemock/include)
 include_directories(include)
 
 file(GLOB MY_CPP_FILES src/*.cpp main.cpp)
-add_executable(stavalfi_cpp_ex2 ${MY_CPP_FILES} src/GameController.cpp include/GameController.h)
+add_executable(stavalfi_cpp_ex2 ${MY_CPP_FILES})
 target_link_libraries(stavalfi_cpp_ex2 gtest gtest_main)
