--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.9)
-project(stavalfi_cpp_ex2)
-set(CMAKE_CXX_STANDARD 11)
-include_directories(include)
+project(stavalfi_cpp_ex2) # name of the project
+set(CMAKE_CXX_STANDARD 11) # c++ version
+include_directories(include) # include all header files under directory "include" so we can use them
 
-file(GLOB MY_CPP_FILES src/*.cpp main.cpp)
-add_executable(stavalfi_cpp_ex2 ${MY_CPP_FILES})
+file(GLOB MY_CPP_FILES src/*.cpp main.cpp) # include all cpp files under directory "src"
+add_executable(stavalfi_cpp_ex2 ${MY_CPP_FILES}) #run the program
 
